Adding text about automatic deployment

--- a/templates/compute.html
+++ b/templates/compute.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>My application</title>
+<title>My application deployed automatically</title>
   <h1>Hello, World!</h1>
   <h2>Result is {{result}}</h2>
   <p>Enter an array using yaml format in the first area. Second and third areas accept single values for each. The values entered in both area is searched in array. If both of them are found, then result is True, otherwise it is False. </p>
